Przed wdrozeniem produkcji

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>Magic Concrete - Concrete Everyday Art</title>
   <meta name="keywords" content="concrete, beton, magic, art, design, decor">
   <meta name="description"
-    content="Unique and artistic items made of architectural concrete. A gallery of handmade decorative concrete products. Decorative and magic elements that give the room a modern look.">
+    content="Unique and artistic items made of architectural concrete. A gallery of handmade decorative concrete products. Decorative and magic elements that give the room a modern look. Concrete art and concrete design.">
 
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
 
